# venturemind

./: .env.example  .gitignore  BACKEND_PROPOSAL.md  CLAUDE.md  CODEBASE_ANALYSIS.md  REDUNDANT_FILES.md  SYNA_UI_ALIGNMENT_REPORT.md  SYNA_UI_TRANSFORMATION_REPORT.md  SYNA_UNIFIED_IMPLEMENTATION_PLAN.md  SynaImpDoc.md  architecture.md  index.html  init-shadcn.sh  package-lock.json  package.json  readme.md  start-local.sh  tailwind.config.js  test_websocket.html  update-theme.md  vite.config.ts
backend/: .env.example  .gitignore  Makefile  main.py  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: marketplace.py
backend/app/agents/definitions/: analyst.yaml  critic.yaml  engineer.yaml  ops.yaml  planner.yaml  researcher.yaml  scheduler.yaml  writer.yaml
backend/app/agents/engine/: analyst.py  base.py  critic.py  engineer.py  ops.py  planner.py  registry.py  researcher.py  scheduler.py  writer.py
backend/app/agents/tools/: base_tools.py
backend/app/api/: events.py
backend/app/api/v1/: agents.py  auth.py  conversations.py  marketplace.py  tasks.py  threading.py  unified_websocket.py  websocket.py
backend/app/core/: atomic_operations.py  auth.py  middleware.py  redis_manager.py  websocket_manager.py
backend/app/orchestration/: supervisor.py
backend/app/services/: __init__.py  gemini_service.py  thread_summarization.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  LLM_OBSERVABILITY_ANALYSIS.md  OMNIBOX_AND_MENTIONS.md  SYNA_UI_TRANSFORMATION_REPORT.md  TOOL_CALLING_INTEGRATION.md  UNIFIED_COMMAND_ARCHITECTURE.md
src/: App.tsx  index.css  main.tsx  types.ts
src/components/: AgentRail.tsx  AgenticAIChatOrchestrator.tsx  AuthGuard.tsx  BackButton.tsx  BranchModal.tsx  CollaborativeEditor.tsx  ContextCard.tsx  ContextMenu.tsx  ContextSwitcher.tsx  ConversationMode.tsx  (+34 more)
supabase/: config.toml
(+114 files in other folders)
